# GYM

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  copy_env  copyenv  docker-compose.yml  fix_aiogram.sh  main.py  pyproject.toml  requirements.txt  task_manage.txt  task_manager.txt
app/: dispatcher.py
app/bot/: bot_env.py
app/bot/buttons/: reply.py
app/bot/handlers/: __init__.py  main.py  menu.py  oxrigi_buyurtma.py  profilim.py
db/: models.py
docker/postgres/: init.sql  init.txt
locales/: en.json  ru.json  uz.json
scripts/: deploy.sh  migrate.sh
src/: bot.py  config.py  main.py
src/api/: __init__.py
src/api/handlers/: __init__.py  language.py  settings.py  start.py
src/api/keyboards/: __init__.py  base.py
src/api/middleware/: database.py
src/core/: __init__.py  database.py  exceptions.py  logging.py
src/domain/: __init__.py
src/domain/products/: models.py
src/domain/users/: repository.py
src/infrastructure/: __init__.py
src/infrastructure/i18n/: __init__.py  loader.py  middleware.py  service.py
tests/: test_i18n.py
